# temoa

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FEATURE_BRANCH.md  README.md  config_tx_demo.toml  create_archive.py  definitions.py  env-all.yaml  environment.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: deploy_nightly_pypi.py
.github/workflows/: ci.yml  dependency-canary.yml  deploy-nightly.yml  publish.yml
data_files/: .gitignore  README.txt  temoa_basics_0.sql  temoa_basics_1.sql  temoa_basics_2.sql  temoa_emissions_pricing_test.sql  temoa_emissions_pricing_test.sqlite  temoa_schema.sql  temoa_schema.sqlite  temoa_schema_v3.sql  temoa_schema_v3_1.sql  temoa_schema_v3_2.sql  temoa_schema_v4.sql  temoa_test_system.sql  temoa_test_system.sqlite  temoa_utopia.sql  temoa_utopia.sqlite  temoa_utopia_two-regions.sql  temoa_utopia_two-regions.sqlite
data_files/example_dbs/: .gitignore  README.txt  ldes.sql  materials.sql  morris_utopia.sql  seasonal_storage.sql  stepped_demand.sql  survival_curve.sql  test_system.sql  utopia.sql
data_files/monte_carlo/: run_settings_1.csv
data_files/my_configs/: config_sample.toml  materials.toml  mga_utopia.toml  monte_carlo_utopia.toml  morris_utopia.toml  seasonal_storage.toml  stepped_demand.toml
data_files/temoa_utopia_ss_24F104_model/: ss_24F104.lp  ss_24F104.xlsx  ss_24F104_pyam.xlsx
data_processing/: DB_to_Excel.py  DatabaseUtil.py  GraphVizUtil.py  MakeGraphviz.py  MakeOutputPlots.py
docs/: Database Upgrade and Troubleshooting.md  Makefile  README.md  automake.sh  commodity network notes.md  technology groups.md  types_improvement_plan.md
docs/source/: Documentation.rst  References.bib  commodity_network.rst  computational_implementation.rst  conf.py  database.rst  database_schema.mmd  db_model_comparison.rst  extensions.rst  index.rst  mathematical_formulation.rst  mga.rst  monte_carlo.rst  myopic.rst  param_desc_and_tables.rst  preface.rst  quick_start.rst  references.rst  set_desc_and_tables.rst  stochastics.rst  unit_checking.rst  visualization.rst
notebooks/: Network_diagrams.ipynb  develop_mitigation_curve copy.ipynb  loan_cost_primer.ipynb
output_files/: .gitignore
scripts/: apply_region_period_subset.py  bump_version.py  generate_etl_figure.py
stubs/pyomo/: core.pyi  dataportal.pyi
temoa/: __about__.py  __init__.py  cli.py  version_information.py
temoa/_internal/: __init__.py  data_brick.py  exchange_tech_cost_ledger.py  hybrid_loader.py  precompute.py  run_actions.py  table_data_puller.py  table_writer.py  temoa_initialize.py  temoa_rules.py  temoa_sequencer.py
temoa/components/: capacity.py  commodities.py  costs.py  emissions.py  flows.py  geography.py  limits.py  operations.py  ramping.py  reserves.py  storage.py  technology.py  time.py  utils.py
temoa/core/: config.py  model.py  modes.py
temoa/data_io/: component_manifest.py  hybrid_loader.py  loader_manifest.py
temoa/data_processing/: DB_to_Excel.py  MakeGraphviz.py  MakeOutputPlots.py  README.md  database_util.py  db_query.py  db_to_excel.py  graphviz_formats.py  graphviz_util.py  make_graphviz.py  make_output_plots.py
temoa/db_schema/: temoa_schema_v3_1.sql  temoa_schema_v4.sql
temoa/extensions/: README.txt  framework.py  get_comm_tech.py
temoa/model_checking/: commodity_graph.py  commodity_network.py  commodity_network_manager.py  element_checker.py  network_model_data.py  pricing_check.py  validators.py
temoa/temoa_model/: data_brick.py  exchange_tech_cost_ledger.py  hybrid_loader.py  run_actions.py  table_data_puller.py  table_writer.py  temoa_config.py  temoa_initialize.py  temoa_model.py  temoa_rules.py  temoa_sequencer.py
temoa/tutorial_assets/: config_sample.toml  utopia.sql  utopia.sqlite
temoa/types/: __init__.py  core_types.py  database_types.py  dict_types.py  model_types.py  pandas_stubs.pyi  pyomo_opt_stubs.pyi  pyomo_stubs.pyi  set_types.py  solver_types.py  validation_types.py
temoa/utilities/: capacity_analyzer.py  clear_db_outputs.py  db_migration_operator.py  db_migration_tg.py  db_migration_to_v3.py  db_migration_v3_1_to_v4.py  db_migration_v3_to_v3_1.py  graph_utils.py  graphviz_generator.py  graphviz_util.py  master_migration.py  run_all_v4_migrations.py  set_spitter.py  sql_migration_v3_1_to_v4.py  sqlite_utils.py  unit_cost_explorer.py  visualizer.py
temoa_model/: ReferenceModel.py  __main__.py  config_sample  config_sample_blank  config_sample_emissions_cost  config_sample_myopic_2030  config_sample_temp  get_comm_tech.py  get_region.py  pformat_results.py  temoa_config.py  temoa_initialize.py  temoa_mga.py  temoa_model.py  temoa_myopic.py  temoa_rules.py  temoa_run.py  temoa_stochastic.py
tests/: conftest.py  legacy_test_values.py  smoke_test.py  test_cli.py  test_commodity_visualizer.py  test_cycle_limits.py  test_element_checker.py  test_emission_results.py  test_exchange_cost_ledger.py  test_extensions.py  test_full_runs.py  test_graphviz_integration.py  test_hull.py  test_linked_tech.py  test_material_results.py  test_mc_run.py  test_model.py  test_myopic_sequencer.py  test_network_model_data.py  test_pricing_check.py  test_set_consistency.py  test_source_check.py  test_storage.py  test_table_writer.py  test_tech_activity_vectors.py  test_temoa_sequencer.py  test_unit_propagation.py  test_v4_migration.py  test_validators.py
tests/testing_configs/: config_annualised_demand.toml  config_emissions.toml  config_link_test.toml  config_materials.toml  config_mediumville.toml  config_myopic_capacities.toml  config_seasonal_storage.toml  config_storageville.toml  config_survival_curve.toml  config_test_system.toml  config_test_week.toml  config_utopia.toml  config_utopia_gv.toml  config_utopia_mc.toml  config_utopia_myopic.toml  config_utopia_stochastic.toml
tests/testing_data/: US_9R_8D_legacy_set_sizes.json  US_9R_8D_set_sizes.json  annualised_demand.sql  emissions.sql  emissions.sqlite  materials.sql  materials.sqlite  mediumville.sql  mediumville.sqlite  storageville.sql  (+19 more)
(+122 files in other folders)
