[project]
name = "temoa"
version = "4.0.0a1"
description = "Tools for Energy Model Optimization and Analysis"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
authors = [
    { name = "TemoaProject Team", email = "info@temoaproject.org" }
]

dependencies = [
    "pyomo>=6.8.0",
    "ipython",
    "matplotlib==3.9.2",
    "pandas>=2.2.2",
    "numpy>=2.1.0",
    "joblib",
    "salib>=1.5.1",
    "pydoe>=0.3.8",
    "pyutilib>=6.0.0",
    "graphviz>=0.20.3",
    "ipykernel",
    "jupyter",
    "jupyter_contrib_nbextensions",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "xlsxwriter>=3.2.0",
    "pyam-iamc>=2.2.4",
    "pytest>=8.3.2",
    "deprecated>=1.2.14",
    "openpyxl>=3.1.5",
    "networkx>=3.3",
    "highspy>=1.7.2",
    "scipy>=1.14.1",
]


[dependency-groups]
dev = [
    "types-deprecated>=1.2.15.20250304",
    "ruff>=0.2.0",
    "mypy>=1.0.0",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pandas-stubs>=2.3.2.250926",
    "types-networkx>=3.5.0.20251001",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
    "sphinxcontrib-bibtex>=2.6.2",
]

plotting = [
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
]
solver = [
    "gurobipy>=12.0.3,<13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
indent-width = 4
exclude = ["stubs"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long temporarily ignored
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
# Python version targeting
python_version = "3.12"

# Tell mypy to also look for stubs in this directory
mypy_path = "stubs"

# Exclude specific directories from type checking will try to add them back gradually
exclude = "(?x)(^tests/|^temoa/data_processing/|^temoa/extensions/|^temoa/utilities/|^docs/)"

# Strict typing for our own code
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Handle external dependencies gracefully
ignore_missing_imports = false

# Be explicit about Any usage
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_expr = false # temporarily false to ease transition
disallow_any_decorated = true
disallow_any_explicit = false # temporarily false to ease transition


# Enable strict checking for core modules
[[tool.mypy.overrides]]
module = [
    "temoa.core.*",
    "temoa.components.*",
    "temoa._internal.*",
    "temoa.data_io.*",
    "temoa.model_checking.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# Less strict for type definitions (allow Any for stubs)
[[tool.mypy.overrides]]
module = "temoa.types.*"
disallow_any_explicit = false



[project.urls]
Homepage = "https://temoaproject.org"
Documentation = "https://temoaproject.github.io/temoa"
Repository = "https://github.com/TemoaProject/temoa"
